added component and model for professor

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -6,4 +6,6 @@
   <app-student-info></app-student-info>
   <br>
   <app-document-table></app-document-table>
+  <br>
+  <app-professor-info></app-professor-info>
 </div>
