Added transaction table component

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -8,4 +8,6 @@
   <app-document-table></app-document-table>
   <br>
   <app-professor-info></app-professor-info>
+  <br>
+  <app-finance-table></app-finance-table>
 </div>
