Added component for student table and edited exam model

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -10,4 +10,6 @@
   <app-professor-info></app-professor-info>
   <br>
   <app-exam-table></app-exam-table>
+  <br>
+  <app-student-table></app-student-table>
 </div>
