--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -14,4 +14,6 @@
   <app-exam-table></app-exam-table>
   <br>
   <app-student-table></app-student-table>
+  <br>
+  <app-grade-student-table></app-grade-student-table>
 </div>
