Added component course-table

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -16,4 +16,6 @@
   <app-student-table></app-student-table>
   <br>
   <app-grade-student-table></app-grade-student-table>
+  <br>
+  <app-course-table></app-course-table>
 </div>
