--- a/FrontendWebService/src/app/login-form/login-form.component.html
+++ b/FrontendWebService/src/app/login-form/login-form.component.html
@@ -13,5 +13,5 @@
       <label class="form-check-label" for="rememberCheck">Remember me.</label>
     </div>
     <button type="submit" class="btn btn-primary" style="margin-right: 5px;">Submit</button>
-    <button type="submit" class="btn btn-secondary">Don't have an account?</button>
+    <button routerLink="/register" type="submit" class="btn btn-secondary">Don't have an account?</button>
   </form>
