--- a/FrontendWebService/src/app/register-form/register-form.component.html
+++ b/FrontendWebService/src/app/register-form/register-form.component.html
@@ -14,5 +14,5 @@
         <input type="password" class="form-control" id="inputConfirmPassword">
     </div>
     <button type="submit" class="btn btn-primary" style="margin-right: 5px;">Submit</button>
-    <button type="submit" class="btn btn-secondary ml-2">I already have an account</button>
+    <button routerLink="/login" type="submit" class="btn btn-secondary ml-2">I already have an account</button>
   </form>
