Added build path added static files to backend

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1>Main page</h1>
-  <button routerLink="/login" type="submit" class="btn btn-secondary ml-2">I already have an account</button>
+  <button routerLink="/documentTable" type="submit" class="btn btn-secondary ml-2">I already have an account</button>
 
 </div>
 
