Added document class and document service
Added finance component
Added finance-history component
Added navbar

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -1,9 +1,5 @@
-<div>
-  <h1>Main page</h1>
-  <button routerLink="/documentTable" type="submit" class="btn btn-secondary ml-2">I already have an account</button>
+<div class="container">
+  <app-navbar></app-navbar>
 
-</div>
-
-<div style="margin-top: 100px" class="container">
   <router-outlet></router-outlet>
 </div>
