[ADDED] student-service and displaying student from server

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="container">
-<<<<<<< Updated upstream
   <app-navbar></app-navbar>
+  <app-admin-profile></app-admin-profile>
 
-=======
->>>>>>> Stashed changes
   <router-outlet></router-outlet>
 </div>
