--- a/FrontendWebService/src/app/admin-students/admin-students.component.html
+++ b/FrontendWebService/src/app/admin-students/admin-students.component.html
@@ -1,3 +1,4 @@
+<div>
 <h3>{{ title }}</h3>
 <table class="table">
     <thead>
@@ -20,8 +21,26 @@
           <button type="button" class="btn btn-danger">Delete</button>
         </td>
         <td>
-          <button type="button" class="btn btn-info">Edit</button>
+          <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Edit</button>
         </td>
       </tr>
     </tbody>
   </table>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
