--- a/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
+++ b/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
@@ -1,1 +1,27 @@
-<p>admin-professor works!</p>
+<div>
+  <h3>{{ title }}</h3>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">FirstName</th>
+        <th scope="col">LastName</th>
+        <th scope="col">Options</th>
+        <th scope="col">Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor = "let professor of professors; let i = index">
+        <th scope="row">{{ i + 1 }}</th>
+        <td>{{ professor.firstName }}</td>
+        <td>{{ professor.lastName }}</td>
+        <td>
+          <button type="button" class="btn btn-danger">Delete</button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-info">Edit</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
