[UPDATE] added add budton for admin-professor and admin-student

--- a/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
+++ b/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h3>{{ title }}</h3>
+  <h3 style="margin-top: 80px;">{{ title }}</h3>
   <table class="table">
     <thead>
       <tr>
@@ -24,4 +24,5 @@
       </tr>
     </tbody>
   </table>
+  <button type="button" class="btn btn-success" style="float: right;">Add professor</button>
 </div>
