--- a/FrontendWebService/src/app/admin-profile/admin-profile.component.html
+++ b/FrontendWebService/src/app/admin-profile/admin-profile.component.html
@@ -1,7 +1,27 @@
-<nav class="nav">
-    <a class="nav-link Students" routerLink = "/adminStudents" style="color: black;">Students</a>
-    <a class="nav-link Professors" routerLink = "/adminProfessors" style="color: black;" href="#">Professors</a>
-    <a class="nav-link Exams" style="color: black;" href="#">Exams</a>
-    <a class="nav-link Courses" style="color: black;" href="#">Courses</a>
-    <a class="nav-link Logout" style="color: black;">Logout</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="">UniService</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link Students" routerLink = "/adminStudents" style="color: black;">Students</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link Professors" routerLink = "/adminProfessors" style="color: black;" href="#">Professors</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link Exams" style="color: black;" href="#">Exams</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link Courses" style="color: black;" href="#">Courses</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link Logout" style="color: black;">Logout</a>
+        </li>
+        </ul>
+      </div>
+    </div>
 </nav>
