--- a/FrontendWebService/src/app/login-form/login-form.component.html
+++ b/FrontendWebService/src/app/login-form/login-form.component.html
@@ -1,17 +1,17 @@
-<form class="w-25 m-auto">
+<form class="w-25 m-auto" #signupForm="ngForm" (ngSubmit)="login(signupForm)">
     <h2>Login</h2>
     <div class="mb-3">
       <label for="inputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp">
+      <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" name="username" ngModel>
     </div>
     <div class="mb-3">
       <label for="inputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="inputPassword1">
+      <input type="password" class="form-control" id="inputPassword" name="password" ngModel>
     </div>
     <div class="mb-3 form-check">
       <input type="checkbox" class="form-check-input" id="rememberCheck">
       <label class="form-check-label" for="rememberCheck">Remember me.</label>
     </div>
     <button type="submit" class="btn btn-primary" style="margin-right: 5px;">Submit</button>
-    <button routerLink="/register" type="submit" class="btn btn-secondary">Don't have an account?</button>
+    <button routerLink="/register" type="button" class="btn btn-secondary">Don't have an account?</button>
 </form>
