--- a/FrontendWebService/src/app/admin-profile/admin-profile.component.html
+++ b/FrontendWebService/src/app/admin-profile/admin-profile.component.html
@@ -3,5 +3,5 @@
     <a class="nav-link Professors" routerLink = "/adminProfessors" style="color: black;" href="#">Professors</a>
     <a class="nav-link Exams" routerLink = "/exam" style="color: black;" href="#">Exams</a>
     <a class="nav-link Courses" style="color: black;" href="#">Courses</a>
-    <a class="nav-link Logout" style="color: black;">Logout</a>
+    <a *ngIf="loggedIn()" class="nav-link Logout" style="color: black;" (click)="logout()" href="#">Logout</a>
 </nav>
