--- a/FrontendWebService/src/app/login-form/login-form.component.html
+++ b/FrontendWebService/src/app/login-form/login-form.component.html
@@ -12,6 +12,6 @@
       <input type="checkbox" class="form-check-input" id="rememberCheck">
       <label class="form-check-label" for="rememberCheck">Remember me.</label>
     </div>
-    <button type="submit" class="btn btn-primary" style="margin-right: 5px;">Submit</button>
+    <button type="submit" class="btn btn-primary btn-pill" style="margin-right: 5px;">Submit</button>
     <button routerLink="/register" type="button" class="btn btn-secondary">Don't have an account?</button>
 </form>
