--- a/FrontendWebService/src/styles.css
+++ b/FrontendWebService/src/styles.css
@@ -1,3 +1,15 @@
+body{
+  background-image: url("assets/images/hero_1.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+.vertical-parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 body {
     line-height: 1.7;
     color: gray;
