--- a/FrontendWebService/src/app/admin-students/admin-students.component.html
+++ b/FrontendWebService/src/app/admin-students/admin-students.component.html
@@ -71,35 +71,47 @@
 </div>
 <div id="addStudent" style="display: none;">
   <h2>Add new student</h2>
-  <form>
+  <form #signupForm="ngForm" (ngSubmit)="addStudent(signupForm)">
     <div class="row mb-3">
       <label for="inputFirstName" class="col-sm-2 col-form-label">FirstName</label>
       <div class="col-sm-10">
-        <input type="text" id="inputFirstName" class="form-control" placeholder="Enter the FirstName">
+        <input type="text" id="inputFirstName" class="form-control" placeholder="Enter the FirstName" name="firstname" ngModel>
       </div>
     </div>
     <div class="row mb-3">
       <label for="inputLastName3" class="col-sm-2 col-form-label">LastName</label>
       <div class="col-sm-10">
-        <input type="text" id="inputLastName3" class="form-control" placeholder="Enter the LastName">
+        <input type="text" id="inputLastName3" class="form-control" placeholder="Enter the LastName" name="lastname" ngModel>
       </div>
     </div>
     <div class="row mb-3">
       <label for="inputBalance" class="col-sm-2 col-form-label">Balance</label>
       <div class="col-sm-10">
-        <input type="text" id="inputBalance" class="form-control" placeholder="Enter the Balance of Student">
+        <input type="text" id="inputBalance" class="form-control" placeholder="Enter the Balance of Student" name="balance" ngModel>
       </div>
     </div>
     <div class="row mb-3">
       <label for="inputCardNumber" class="col-sm-2 col-form-label">Card number</label>
       <div class="col-sm-10">
-        <input type="text" id="inputCardNumber" class="form-control" placeholder="Enter the Card number of Student">
+        <input type="text" id="inputCardNumber" class="form-control" placeholder="Enter the Card number of Student" name="cardnumber" ngModel>
       </div>
     </div>
     <div class="row mb-3">
       <label for="inputAccountNumber" class="col-sm-2 col-form-label">Account number</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" placeholder="Enter the Account number of Student">
+        <input type="text" class="form-control" id="inputAccountNumber" placeholder="Enter the Account number of Student" name="accountnumber" ngModel>
+      </div>
+    </div>
+    <div class="row mb-3">
+      <label for="inputUserName" class="col-sm-2 col-form-label">UserName</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputUserName" placeholder="Enter the username of Student" name="username" ngModel>
+      </div>
+    </div>
+    <div class="row mb-3">
+      <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" id="inputPassword" placeholder="Enter the password of Student" name="password" ngModel>
       </div>
     </div>
     <div class="col-12">
