--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -7,6 +7,19 @@
     <router-outlet></router-outlet>
   </div>
   <ng-template #elseBlock>
-    <app-login-form [onLogin]="onLogin"></app-login-form>
+    <div class="row mh-100">
+      <div class="col-lg-6">
+        <div style="top: 25%;  position: absolute;">
+          <h2 class="bold text-white">UniService</h2>
+          <br>
+          <p class="text-white">“Education is the most powerful weapon which you can use to change the world” – Nelson Mandela</p>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div style="background-color: white; top: 25%;  position: absolute;">
+          <app-login-form class="mt-auto" [onLogin]="onLogin"></app-login-form>
+        </div>
+      </div>
+    </div>
   </ng-template>
 </div>
