--- a/FrontendWebService/src/styles.css
+++ b/FrontendWebService/src/styles.css
@@ -1,3 +1,9 @@
+body{
+  background-image: url("/images/hero_1.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
 body {
     line-height: 1.7;
     color: gray;
