Made a bit nicer profile page

--- a/FrontendWebService/src/app/document-table/document-table.component.html
+++ b/FrontendWebService/src/app/document-table/document-table.component.html
@@ -1,11 +1,11 @@
-<div >
+<div class="bg-light p-4 rounded">
   <h2>Documents</h2>
   <table class="table">
-    <thead>
+    <thead class="bg-primary rounded">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Title</th>
-        <th scope="col">Options</th>
+        <th scope="col" class="text-light">#</th>
+        <th scope="col" class="text-light">Title</th>
+        <th scope="col" class="text-light">Options</th>
       </tr>
     </thead>
     <tbody>
