--- a/FrontendWebService/src/app/profile/profile.component.html
+++ b/FrontendWebService/src/app/profile/profile.component.html
@@ -1,2 +1,8 @@
-<app-student-info></app-student-info>
-<app-document-table></app-document-table>
+<div class="row">
+    <div class="col-lg-6">
+        <app-student-info></app-student-info>
+    </div>
+    <div class="col-lg-6">
+        <app-document-table></app-document-table>
+    </div>
+</div>
