--- a/FrontendWebService/src/app/student-info/student-info.component.html
+++ b/FrontendWebService/src/app/student-info/student-info.component.html
@@ -1,4 +1,4 @@
-<div class="w-50 ml-auto">
+<!--div class="w-50 ml-auto">
     <h2>Student info</h2>
     <table class="table">
       <tbody>
@@ -45,3 +45,4 @@
       </tbody>
     </table>
   </div>
+-->
