--- a/FrontendWebService/src/app/document-table/document-table.component.html
+++ b/FrontendWebService/src/app/document-table/document-table.component.html
@@ -1,5 +1,7 @@
 <div class="bg-light p-4 rounded">
   <h2>Documents</h2>
+  <input type="file" id="chooseFileInput" class="btn btn-primary" name="upload">
+  <button type="button" (click)="onUpload()" class="btn btn-primary">Upload file</button>
   <table class="table">
     <thead class="bg-primary rounded">
       <tr>
