--- a/FrontendWebService/src/app/professor-info/professor-info.component.html
+++ b/FrontendWebService/src/app/professor-info/professor-info.component.html
@@ -1,5 +1,5 @@
-<div class="w-25 m-auto">
-    <h2>Professor profile</h2>
+<div div class="bg-light p-4 rounded">
+    <h2>Profile</h2>
     <table class="table">
       <tbody>
         <tr>
@@ -16,14 +16,6 @@
             </td>
             <td>
                 {{professor.lastName}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-                User name:
-            </td>
-            <td>
-                {{professor.userName}}
             </td>
           </tr>
       </tbody>
