--- a/FrontendWebService/src/app/professor-navbar/professor-navbar.component.html
+++ b/FrontendWebService/src/app/professor-navbar/professor-navbar.component.html
@@ -1,21 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="">UniService</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/professorProfile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/professorExams">Exams</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/professorStudents">Students</a>
-          </li>
+<header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
+<div class="d-flex align-items-center">
+    <div class="site-logo mr-auto w-25"><a routerLink="/">UniService</a></div>
+    <div class="mx-auto text-center">
+      <nav class="site-navigation position-relative text-right" role="navigation">
+        <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
+          <li><a routerLink="/professorProfile" class="nav-link"><strong>Profile</strong></a></li>
+          <li><a routerLink="/professorExams" class="nav-link"><strong>Exams</strong></a></li>
+          <li><a routerLink="/professorStudents" class="nav-link"><strong>Students</strong></a></li>
+          <li class="nav-item"><a class="nav-link" (click)="onLogOut()" >Logout</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
-</nav>
+  </div>
+
