Documents are now added to users that add them
Added logout in student navbar
Document table now shows only documents of the logged in user

--- a/FrontendWebService/src/app/app.component.html
+++ b/FrontendWebService/src/app/app.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-lg-6  col-xl-6">
         <div style="background-color: white">
-          <app-login-form class="mt-auto" [onLogin]="onLogin"></app-login-form>
+          <app-login-form class="mt-auto"></app-login-form>
         </div>
       </div>
     </div>
