--- a/FrontendWebService/src/app/document-table/document-table.component.html
+++ b/FrontendWebService/src/app/document-table/document-table.component.html
@@ -1,6 +1,6 @@
 <div class="bg-light p-4 rounded">
-  <h2>Documents</h2>
-  <table class="table">
+  <h2 style="color: black;">Documents</h2>
+  <table class="table" style="color: black;">
     <thead class="bg-primary rounded">
       <tr>
         <th scope="col" class="text-light">#</th>
