--- a/FrontendWebService/src/app/student-info/student-info.component.html
+++ b/FrontendWebService/src/app/student-info/student-info.component.html
@@ -1,6 +1,6 @@
 <div class="bg-light p-4 rounded">
-    <h2>Student info</h2>
-    <table class="table">
+    <h2 style="color: black;">Student info</h2>
+    <table class="table" style="color: black;">
       <tbody>
         <tr>
           <td>
