--- a/FrontendWebService/src/app/components/exam-part-table/exam-part-table.component.html
+++ b/FrontendWebService/src/app/components/exam-part-table/exam-part-table.component.html
@@ -1,5 +1,5 @@
 <div class="bg-light p-4 rounded">
-    <h2>Exams</h2>
+    <h2>Exam parts</h2>
     <table class="table table-sm">
       <thead>
         <tr>
@@ -7,7 +7,11 @@
           <th scope="col">Name</th>
           <th scope="col">Points</th>
           <th scope="col">Required points</th>
-          <th scope="col">Status</th>
+          <th scope="col">Status
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="statusSortCheckbox" (click)="onCheckClick()">
+            </div>
+          </th>
           <th scope="col">Options</th>
         </tr>
       </thead>
