--- a/FrontendWebService/src/app/admin-students/admin-students.component.html
+++ b/FrontendWebService/src/app/admin-students/admin-students.component.html
@@ -21,53 +21,12 @@
           <button type="button" class="btn btn-danger" (click)="deleteStudent(student.id)">Delete</button>
         </td>
         <td>
-          <button type="button" class="btn btn-info" (click)="showEditStudent()">Edit</button>
+          <button type="button" class="btn btn-info" (click)="gotoEdit(student.id)">Edit</button>
         </td>
       </tr>
     </tbody>
   </table>
   <button type="button" class="btn btn-success" style="float: right;" (click)="showAddStudent()">Add student</button>
-</div>
-<div id="editStudent" style="display: none; margin-top: 100px;">
-  <h3>Edit student</h3>
-  <form>
-    <div class="row mb-3">
-      <label for="inputFirstName" class="col-sm-2 col-form-label">FirstName</label>
-      <div class="col-sm-10">
-        <input type="text"   id="inputFirstName" name="firstname" class="form-control">
-      </div>
-    </div>
-    <div class="row mb-3">
-      <label for="inputLastName3" class="col-sm-2 col-form-label">LastName</label>
-      <div class="col-sm-10">
-        <input type="text"  name="lastname" id="inputLastName3" class="form-control">
-      </div>
-    </div>
-    <div class="row mb-3">
-      <label for="inputCardNumber" class="col-sm-2 col-form-label">Card number</label>
-      <div class="col-sm-10">
-        <input type="text"  name="cardnumber" id="inputCardNumber" class="form-control">
-      </div>
-    </div>
-    <div class="row mb-3">
-      <label for="inputBalance" class="col-sm-2 col-form-label">Balance</label>
-      <div class="col-sm-10">
-        <input type="text"  name="balance" id="inputBalance" class="form-control">
-      </div>
-    </div>
-    <div class="row mb-3">
-      <label for="inputCardNumber" class="col-sm-2 col-form-label">Account number</label>
-      <div class="col-sm-10">
-        <input type="text"  name="accountnumber" id="inputCardNumber" class="form-control">
-      </div>
-    </div>
-    <div class="col-12">
-      <button type="submit" class="btn btn-primary" style="float: right;" (click)="goBack()">Cancel</button>
-    </div>
-    <div class="col-11">
-      <button type="submit" class="btn btn-primary" style="float: right;">Confirm</button>
-    </div>
-  </form>
 </div>
 <div id="addStudent" style="display: none;">
   <h2>Add new student</h2>
@@ -115,7 +74,7 @@
       </div>
     </div>
     <div class="col-12">
-      <button type="submit" class="btn btn-primary" style="float: right;">Cancel</button>
+      <button type="reset" class="btn btn-primary" style="float: right;" (click)="goBack()">Cancel</button>
     </div>
     <div class="col-11">
       <button type="submit" class="btn btn-primary" style="float: right;" (click)="goBack()">Confirm</button>
