--- a/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
+++ b/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
@@ -58,7 +58,7 @@
       <button type="button" class="btn btn-primary" style="float: right;">Cancel</button>
     </div>
     <div class="col-11">
-      <button type="submit" class="btn btn-primary" style="float: right;" (click)="goBack()">Confirm</button>
+      <button type="submit" class="btn btn-primary" style="float: right;" (click)="reloadCurrentPage()">Confirm</button>
     </div>
     
   </form>
@@ -96,7 +96,7 @@
       <button type="button" class="btn btn-primary" style="float: right;">Cancel</button>
     </div>
     <div class="col-11">
-      <button type="submit" class="btn btn-primary" style="float: right;" (click)="goBack()">Confirm</button>
+      <button type="submit" class="btn btn-primary" style="float: right;" (click)="reloadCurrentPage()">Confirm</button>
     </div>
     
   </form>
