--- a/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
+++ b/FrontendWebService/src/app/components/admin-professor/admin-professor/admin-professor.component.html
@@ -65,31 +65,19 @@
 </div>
 
 <div id="editTeacher" style="display: none;">
-  <h2>Add new Teacher</h2>
+  <h2>Edit Teacher</h2>
   <form  (ngSubmit)="editTeacher()">
     <div class="row mb-3">
       <label for="inputFirstName" class="col-sm-2 col-form-label">FirstName</label>
       <div class="col-sm-10">
-        <input [(ngModel)]="selectedProfesor.firstName" type="text" id="inputFirstName" class="form-control" placeholder="Enter the First Name" name="firstName" >
+        <input [(ngModel)]="selectedProfesor.firstName" type="text" id="inputFirstNameEdit" class="form-control" placeholder="Enter the First Name" name="firstName" >
       </div>
     
     </div>
     <div class="row mb-3">
       <label for="inputlastName" class="col-sm-2 col-form-label">lastName</label>
       <div class="col-sm-10">
-        <input [(ngModel)]="selectedProfesor.lastName" type="text" id="inputLastName" class="form-control" placeholder="Enter the Last Name" name="lastName" >
-      </div>
-    </div>
-    <div class="row mb-3">
-      <label for="inputUserName" class="col-sm-2 col-form-label">UserName</label>
-      <div class="col-sm-10">
-        <input  [(ngModel)]="selectedProfesor.user.userName" type="email" class="form-control" id="inputUserName" placeholder="Enter the username " name="username" >
-      </div>
-    </div>
-    <div class="row mb-3">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input  [(ngModel)]="selectedProfesor.user.password" type="password" class="form-control" id="inputPassword" placeholder="Enter the password" name="password" >
+        <input [(ngModel)]="selectedProfesor.lastName" type="text" id="inputLastNameEdit" class="form-control" placeholder="Enter the Last Name" name="lastName" >
       </div>
     </div>
     <div class="col-12">
