--- a/FrontendWebService/src/app/professor-navbar/professor-navbar.component.html
+++ b/FrontendWebService/src/app/professor-navbar/professor-navbar.component.html
@@ -6,7 +6,7 @@
         <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
           <li><a routerLink="/professorProfile" class="nav-link"><strong>Profile</strong></a></li>
           <li><a routerLink="/professorExams" class="nav-link"><strong>Exams</strong></a></li>
-          <li><a routerLink="/professorStudents" class="nav-link"><strong>Students</strong></a></li>
+          <li><a routerLink="/courseTable" class="nav-link"><strong>Courses</strong></a></li>
           <li class="nav-item"><a class="nav-link" (click)="onLogOut()" >Logout</a></li>
         </ul>
       </nav>
